<resources>
    <string name="app_name" translatable="false">MusicApp</string>
    <string name="lang">en</string>
    <string name="reload">Reload</string>
    <string name="error_occurred">Error Occurred!</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Log out of the profile</string>
    <string name="logout_question">Are you sure, you want to log out?</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
</resources>